--- a/03-Developer-Skills/index.html
+++ b/03-Developer-Skills/index.html
@@ -25,6 +25,6 @@
   </head>
   <body>
     <h1>Developer Skills & Editor Setup</h1>
-    <script src="script.js"></script>
+    <script src="/03-Developer-Skills/script.js"></script>
   </body>
 </html>
