--- a/11-Arrays-Bankist/index.html
+++ b/11-Arrays-Bankist/index.html
@@ -4,21 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" type="image/png" href="/icon.png" />
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="/11-Arrays-Bankist/icon.png"
+    />
 
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:400,500,600&display=swap"
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/11-Arrays-Bankist/style.css" />
     <title>Bankist</title>
   </head>
   <body>
     <!-- TOP NAVIGATION -->
     <nav>
       <p class="welcome">Log in to get started</p>
-      <img src="logo.png" alt="Logo" class="logo" />
+      <img src="/11-Arrays-Bankist/logo.png" alt="Logo" class="logo" />
       <form class="login">
         <input
           type="text"
@@ -123,6 +127,6 @@
       &copy; by Jonas Schmedtmann. Don't claim as your own :)
     </footer> -->
 
-    <script src="script.js"></script>
+    <script src="/11-Arrays-Bankist/script.js"></script>
   </body>
 </html>
