tweak about text

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <p>
       This course was divided into sections, each focused on teaching a specific
       JavaScript concept through a lecture and an assignment. In the
-      assignments, you write code to accomplish a particular goal using the
+      assignments, I wrote code to accomplish a particular goal using the
       knowledge from the lecture, followed by guidance on how the code should
       ideally be written. The HTML and CSS in the provided links were supplied
       by the course, and I developed the functionality using JavaScript based on
-      a design spec. Most course sections don't include a web interface;
-      instead, they involve writing JavaScript code directly in the browser's
+      a design spec. Most course sections didn't include a web interface;
+      instead, they involved writing JavaScript code directly in the browser's
       console, so a web interface isn't shown for those sections.
     </p>
     <h2>Interactive Sections</h2>
