refactor project structure

--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
     <h2>Interactive Sections</h2>
     <ul>
       <li>
-        <a href="/05-Guess-My-Number/">Section 5: 🤔 Guess My Number</a>
+        <a href="/sections/05-Guess-My-Number/"
+          >Section 5: 🤔 Guess My Number</a
+        >
       </li>
       <li>
-        <a href="/06-Modal">Section 6: 🪧 Modal</a>
+        <a href="/sections/06-Modal">Section 6: 🪧 Modal</a>
       </li>
       <li>
-        <a href="/07-Pig-Game/">Section 7: 🎲 Pig Game</a>
+        <a href="/sections/07-Pig-Game/">Section 7: 🎲 Pig Game</a>
       </li>
     </ul>
   </body>
