--- a/sections/01-Fundamentals-Part-1/index.html
+++ b/sections/01-Fundamentals-Part-1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Developer Skills & Editor Setup</title>
+    <title>JavaScript Fundamentals – Part 1</title>
     <style>
       body {
         height: 100vh;
@@ -12,6 +12,7 @@
         align-items: center;
         background: linear-gradient(to top left, #28b487, #7dd56f);
       }
+
       h1 {
         font-family: sans-serif;
         font-size: 50px;
@@ -23,8 +24,11 @@
       }
     </style>
   </head>
+
   <body>
-    <h1>Developer Skills & Editor Setup</h1>
-    <script src="/03-Developer-Skills/script.js"></script>
+    <h1>JavaScript Fundamentals – Part 1</h1>
+
+    <script src="/sections/01-Fundamentals-Part-1/script.js"></script>
+    <script src="/sections/01-Fundamentals-Part-1/assignments.js"></script>
   </body>
 </html>
